Updated: clean target in Makefile

--- a/pg2/src/rmi/Makefile
+++ b/pg2/src/rmi/Makefile
@@ -2,16 +2,17 @@ JAVA_HOME := $(shell echo $(JAVA_HOME))
 
 JAVAOPT := -classpath ".:${JAVA_HOME}/jre/lib"
 MODULES := $(wildcard *.java)
+DOCDIR := ./doc
 
 default: $(MODULES:.java=.class)
 
 .PHONY: clean 
 
 clean:
-	rm -rf $(MODULES:.java=.class) ../doc
+	rm -rf $(MODULES:.java=.class) $(DOCDIR)
 
 %.class: %.java
 	javac $(JAVAOPT) $<
 
 doc: $(MODULES)
-	javadoc $(JAVAOPT) $(MODULES) -d doc
+	javadoc $(JAVAOPT) $(MODULES) -d $(DOCDIR)
